--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /config/application.yml
-/config/database.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -25,3 +25,5 @@ db/*.sqlite3
 log/*.log
 tmp/
 .DS_Store
+
+database.yml
